# CiteForge

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.bat  build.sh  config.yaml  pca_lite.spec  pyproject.toml  start.bat
.github/workflows/: ci.yml  release.yml
citeforge/: __main__.py
citeforge/agents/: analyst.py  researcher.py  writer.py
citeforge/cli/: app.py
citeforge/core/: consts.py  exceptions.py  models.py
citeforge/ingestion/: dedup.py  parser.py  summarizer.py
citeforge/llm/: base.py  embedding.py
citeforge/llm/providers/: anthropic.py  ollama.py  openai.py
citeforge/orchestrator/: engine.py
citeforge/prompts/: analyst.md
citeforge/retrieval/: hybrid_search.py  reranker.py  scorer.py  vector_store.py
citeforge/search/: semantic_scholar.py
citeforge/web/: __init__.py  app.py  components.py  execution.py  i18n.py  theme.py
citeforge/web/locales/: en.yaml  zh.yaml
citeforge/web/pages/: __init__.py  config_page.py  documents.py  home.py  monitoring.py  preview.py
crates/citeforge-chroma/: Cargo.toml
crates/citeforge-chroma/src/: client.rs  lib.rs
crates/citeforge-core/: Cargo.toml
crates/citeforge-core/src/: error.rs  lib.rs
crates/citeforge-llm/: Cargo.toml
crates/citeforge-llm/src/: anthropic.rs  lib.rs  modelscope.rs  ollama.rs  openai.rs  registry.rs  resilient.rs
crates/citeforge-memory/: Cargo.toml
crates/citeforge-memory/src/: error.rs  lib.rs  manager.rs  store.rs  types.rs
crates/citeforge-pdf/: Cargo.toml
crates/citeforge-pdf/src/: lib.rs  parser.rs  structure.rs
crates/citeforge-plugin/: Cargo.toml
crates/citeforge-plugin/src/: error.rs  lib.rs  manager.rs  types.rs
crates/citeforge-retrieval/: Cargo.toml
crates/citeforge-retrieval/src/: bibtex.rs  bm25.rs  hybrid_search.rs  lib.rs  reranker.rs  scorer.rs
crates/citeforge-search/: Cargo.toml
crates/citeforge-search/src/: lib.rs  semantic_scholar.rs
crates/citeforge-theme/: Cargo.toml
crates/citeforge-theme/src/: lib.rs  manager.rs  presets.rs  theme.rs
crates/citeforge-workspace/: Cargo.toml
crates/citeforge-workspace/src/: db.rs  error.rs  event_log.rs  lib.rs  lock.rs  time_tracker.rs
docs/design/: 00-overview.md  01-colors.md  02-typography.md  03-layout.md  04-components.md  05-interaction.md
docs/superpowers/plans/: 2026-05-06-week1-implementation.md  2026-05-08-research-assistant-implementation.md  2026-05-09-dashboard-v3-impl.md  2026-05-10-katex-to-ratex.md
docs/superpowers/specs/: 2026-05-06-launcher-design.md  2026-05-09-dashboard-redesign.md
launcher/: config_wizard.py  main_launcher.py  requirements.txt
migrations/: 001_initial.sql  002_notes_and_agent.sql
monitoring/: prometheus-dashboard.json
pca_lite/: __main__.py
pca_lite/agents/: analyst.py  researcher.py  writer.py
pca_lite/cli/: app.py
pca_lite/core/: enums.py  exceptions.py  models.py
pca_lite/export/: bibtex.py
pca_lite/ingestion/: dedup.py  metadata.py  parser.py  splitter.py  summarizer.py
pca_lite/llm/: base.py  embedding.py
pca_lite/llm/providers/: anthropic.py  ollama.py  openai.py
pca_lite/orchestrator/: engine.py
pca_lite/prompts/: researcher.md  writer.md
pca_lite/retrieval/: hybrid_search.py  reranker.py  scorer.py  vector_store.py
pca_lite/search/: __init__.py  semantic_scholar.py
pca_lite/web/: __init__.py  app.py  components.py  execution.py  i18n.py  theme.py
pca_lite/web/locales/: en.yaml  zh.yaml
pca_lite/web/pages/: __init__.py  config_page.py  documents.py  home.py  monitoring.py  preview.py
prompts/: structure.md  task_architect.md  week1_tasks.md
src/: App.js  App.tsx  index.html  main.js  main.tsx  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: config.rs  lib.rs  main.rs  metrics.rs
src-tauri/src/agent/: context.rs  mod.rs  personality.rs
src-tauri/src/agents/: analyst.rs  mod.rs  researcher.rs  writer.rs
src-tauri/src/application/: agent_chat.rs  container.rs  dto.rs  facade.rs  mod.rs  outbox.rs  use_case.rs
src-tauri/src/domain/: agent.rs  execution_context.rs  mod.rs  task_actor.rs
src-tauri/src/presentation/: commands.rs
src/.next/: routes-manifest.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/agent/: page.tsx
src/components/: CitationList.js  CitationList.tsx  TaskCard.js  TaskCard.tsx  TitleBar.js  TitleBar.tsx  index.ts
src/components/agent/: AgentDiscussionPanel.tsx  AgentEmptyState.tsx  AgentInput.tsx  AgentMessage.tsx  AgentMessageList.tsx  AgentTerminal.js  AgentTerminal.tsx  AgentTerminalHeader.tsx  AgentTrace.js  AgentTrace.tsx  AgentTypingIndicator.tsx  PersonalitySelector.js  PersonalitySelector.tsx  index.ts
src/components/editor/: EditorStatusBar.tsx  EditorToolbar.tsx  MarkdownEditor.js  MarkdownEditor.tsx  PreviewPane.js  PreviewPane.tsx  SourceViewer.tsx  index.ts
src/components/home/: ActivityFeed.tsx  EmptyProjects.tsx  ProjectCard.tsx  WorkTimeCard.tsx  (+2 more)
src/hooks/: index.ts  useActivityTracker.js  useActivityTracker.ts  useAgentChat.ts  useLiterature.ts  useNotes.ts  useOrchestrator.js  useOrchestrator.ts  usePdfIndex.js  usePdfIndex.ts  useReadingProgress.ts  useTaskEvents.js  useTaskEvents.ts  useThemes.ts
src/lib/: latex-renderer.ts  store.js  store.ts  tauri.js  tauri.ts  theme.js  theme.ts  types.ts
src/pages/: Agent.js  Agent.tsx  Editor.js  Editor.tsx  Home.js  Home.tsx  Library.js  Library.tsx  Notes.tsx  Reader.js  Reader.tsx  Settings.js  Settings.tsx  TaskDashboard.js  TaskDashboard.tsx
src/styles/: globals.css  themes.css
tests/: test_bibtex.py  test_scorer.py
(+93 files in other folders)
