[package]
name = "citeforge-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
citeforge-core = { path = "../crates/citeforge-core" }
citeforge-llm = { path = "../crates/citeforge-llm" }
citeforge-retrieval = { path = "../crates/citeforge-retrieval" }
citeforge-pdf = { path = "../crates/citeforge-pdf" }
citeforge-search = { path = "../crates/citeforge-search" }
citeforge-workspace = { path = "../crates/citeforge-workspace" }
citeforge-chroma = { path = "../crates/citeforge-chroma" }
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
secrecy = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
dashmap = "5"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
backoff = { version = "0.4", features = ["tokio"] }
serde_yaml = "0.9"
rustls = "0.22"
regex = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# tauri-plugin-shell = "2"  # Removed - requires OpenSSL
