[package]
name = "citeforge-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
citeforge-core = { path = "../citeforge-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
fs2 = "0.4"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
